--- a/.github/workflows/master-deployment.yml
+++ b/.github/workflows/master-deployment.yml
@@ -71,7 +71,7 @@ jobs:
       context: .
       file: ./Dockerfile
       push: true
-      tags: ${{ secrets.DOCKER_HUB_USERNAME }}/neodash:latest,${{ secrets.DOCKER_HUB_USERNAME }}/neodash:2.1.6
+      tags: ${{ secrets.DOCKER_HUB_USERNAME }}/neodash:latest,${{ secrets.DOCKER_HUB_USERNAME }}/neodash:2.1.7
  build-npm:
    needs: build-test
    runs-on: ubuntu-latest
@@ -88,7 +88,7 @@ jobs:
    - run: yarn install
    - run: yarn run build
    - run: curl ${{ secrets.INDEX_HTML_DEPLOYMENT_URL }} > dist/index.html
-   - run: yarn pack
+   - run: npm pack
    - run: rm -rf target
    - run: mkdir target
    - run: mv *.tgz target/
@@ -100,7 +100,7 @@ jobs:
    - run: npx @neo4j/code-signer --app ./package --private-key neo4j-labs-app.pem --cert neo4j-labs-app.cert --passphrase ${{ secrets.NEO4J_DESKTOP_PASSPHRASE }}
    - run: echo "${{ secrets.NEO4J_DESKTOP_CERTIFICATE }}" > neo4j_desktop.cert
    - run: npx @neo4j/code-signer --verify  --app ./package --root-cert neo4j_desktop.cert
-   - run: cd package && yarn pack
+   - run: cd package && npm pack
    - run: mv package/*.tgz .
    - run: rm -rf package
    - run: tar xvf *.tgz package
