--- a/.github/workflows/develop-test.yml
+++ b/.github/workflows/develop-test.yml
@@ -17,6 +17,13 @@ jobs:
      uses: actions/setup-node@v1
      with:
        node-version: ${{ matrix.node-version }}
+   - name: Creating Neo4j Container
+     run: |
+       chmod +x ./scripts/docker-neo4j-initializer/docker-neo4j.sh
+       ./scripts/docker-neo4j-initializer/docker-neo4j.sh
+       sleep 30s
+       chmod +x ./scripts/docker-neo4j-initializer/start-movies-db.sh
+       ./scripts/docker-neo4j-initializer/start-movies-db.sh
    - run: yarn install
    - name: Cypress run
      uses: cypress-io/github-action@v2
