--- a/.github/workflows/develop-test-deploy.yml
+++ b/.github/workflows/develop-test-deploy.yml
@@ -28,18 +28,18 @@ jobs:
         run: |
           ls -R && echo pwd && ls -R /
         shell: bash
-    #   - name: Build and export
-    #     uses: docker/build-push-action@v4
-    #     with:
-    #       context: .
-    #       tags: mbenz-neodash:latest
-    #       outputs: type=docker,dest=/tmp/mbenz-neodash.tar
+      - name: Build and export
+        uses: docker/build-push-action@v4
+        with:
+          context: '{ { defaultContext } }'
+          tags: mbenz-neodash:latest
+          outputs: type=docker,dest=/tmp/mbenz-neodash.tar
 
-    #   - name: Upload artifact
-    #     uses: actions/upload-artifact@v3
-    #     with:
-    #       name: mbenz-neodash
-    #       path: /tmp/mbenz-neodash.tar
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: mbenz-neodash
+          path: /tmp/mbenz-neodash.tar
 
     #   - name: Checkout
     #     uses: actions/checkout@v2
