--- a/.github/workflows/develop-deployment.yml
+++ b/.github/workflows/develop-deployment.yml
@@ -5,53 +5,26 @@ on:
     branches: [develop]
 
 jobs:
-  build-test:
+  deploy-develop:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x]
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Download artifact
+        uses: actions/download-artifact@v3
         with:
-          node-version: ${{ matrix.node-version }}
-      - name: Creating Neo4j Container
+          name: neodash-mbenz
+          path: /tmp
+      - name: Load image
         run: |
-          chmod +x ./scripts/docker-neo4j-initializer/docker-neo4j.sh
-          ./scripts/docker-neo4j-initializer/docker-neo4j.sh
-          sleep 30s
-          chmod +x ./scripts/docker-neo4j-initializer/start-movies-db.sh
-          ./scripts/docker-neo4j-initializer/start-movies-db.sh
-      - run: yarn install
-      - name: Eslint check
-        run: yarn run lint
-      - name: Cypress run
-        uses: cypress-io/github-action@v4
+          docker load --input /tmp/neodash-mbenz.tar
+          docker image ls -a
+      - name: 'Azure ACR Login'
+        uses: azure/docker-login@v1
         with:
-          build: yarn run build
-          start: yarn run dev
-          wait-on: "http://localhost:3000"
-          browser: chrome
-  build-s3:
-    needs: build-test
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [18.x]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - run: yarn install
-      - run: yarn run build-minimal
-      - name: Set AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-1
-      - run: curl ${{ secrets.INDEX_HTML_DEPLOYMENT_URL }} > dist/index.html
-      - run: aws s3 rm s3://neodash-test.graphapp.io/ --recursive && aws s3 sync dist s3://neodash-test.graphapp.io/ --acl public-read
+          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+          username: ${{ secrets.REGISTRY_USERNAME }}
+          password: ${{ secrets.REGISTRY_PASSWORD }}
+      - name: Push Image
+        run: |
+          docker push updatepath.azurecr.io/neodash-mbenz
