--- a/.github/workflows/develop-deployment.yml
+++ b/.github/workflows/develop-deployment.yml
@@ -41,12 +41,12 @@ jobs:
       - name: Removing Docs Folder
         run: rm -rf docs
 
-      - name: 'Azure ACR Login'
-        uses: azure/docker-login@v1
-        with:
-          login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+      # - name: 'Azure ACR Login'
+      #   uses: azure/docker-login@v1
+      #   with:
+      #     login-server: ${{ secrets.REGISTRY_LOGIN_SERVER }}
+      #     username: ${{ secrets.REGISTRY_USERNAME }}
+      #     password: ${{ secrets.REGISTRY_PASSWORD }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -60,6 +60,13 @@ jobs:
           tags: |
             type=ref, event=branch
             type=sha
+
+      - name: Azure Container Registry Login
+        uses: docker/login-action@v2
+        with:
+          registry: updatepath.azurecr.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and Push to ACR
         uses: docker/build-push-action@v4
