--- a/package.json
+++ b/package.json
@@ -64,9 +64,11 @@
     "lodash.debounce": "^4.0.8",
     "lodash.isequal": "^4.5.0",
     "material-ui-color-picker": "^3.5.1",
+    "mqtt-connection": "^4.1.0",
     "mui-nested-menu": "^3.2.0",
     "neo4j-client-sso": "^1.2.2",
     "openai": "^3.2.1",
+    "precompiled-mqtt": "^4.3.14-beta",
     "react": "^17.0.2",
     "react-cool-dimensions": "^2.0.7",
     "react-dom": "^17.0.2",
@@ -85,7 +87,9 @@
     "redux-thunk": "^2.4.1",
     "remark-gfm": "^3.0.1",
     "reselect": "^4.1.5",
+    "stream": "^0.0.2",
     "ts-node": "^10.9.1",
+    "url": "^0.11.0",
     "use-neo4j": "^0.3.13",
     "yaml": "^2.3.1"
   },
