--- a/.github/workflows/develop-test.yml
+++ b/.github/workflows/develop-test.yml
@@ -33,3 +33,6 @@ jobs:
           start: yarn run dev
           wait-on: "http://localhost:3000"
           browser: chrome
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
+          env: CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
