--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/register": "^7.16.9",
+    "@cypress/code-coverage": "^3.10.8",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
