--- a/.github/workflows/develop-test.yml
+++ b/.github/workflows/develop-test.yml
@@ -31,8 +31,7 @@ jobs:
         with:
           build: yarn run build
           start: yarn run dev
-          wait-on: "http://localhost:3000"
+          wait-on: 'http://localhost:3000'
           browser: chrome
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v3
-          env: CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
