--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
     "presets": ["@babel/preset-env", "@babel/preset-react","@babel/preset-typescript"],
-    "plugins": ["@babel/plugin-transform-runtime"]
+    "plugins": ["@babel/plugin-transform-runtime", "istanbul"]
 }
