--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
     "@babel/register": "^7.16.9",
+    "@cypress/code-coverage": "^3.10.8",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
@@ -110,6 +111,7 @@
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "babel-loader": "^8.2.3",
+    "babel-plugin-istanbul": "^6.1.1",
     "css-loader": "^3.6.0",
     "cypress": "^10.11.0",
     "eslint": "^8.26.0",
