--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@nivo/sunburst": "^0.82.1",
     "@nivo/treemap": "^0.82.1",
     "@sentry/react": "^7.57.0",
+    "@sentry/webpack-plugin": "^2.5.0",
     "babel-runtime": "^6.26.0",
     "chroma-js": "^2.4.2",
     "classnames": "^2.3.1",
