--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "react-dom": "^17.0.2",
     "react-force-graph-2d": "^1.23.8",
     "react-gauge-chart": "^0.4.1",
-    "react-guage-component":"1.1.11",
+    "react-gauge-component": "^1.1.12",
     "react-grid-layout": "^1.3.4",
     "react-leaflet": "^3.2.5",
     "react-leaflet-cluster": "^1.0.4",
