--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "react-markdown": "^8.0.0",
     "react-redux": "^7.2.6",
     "react-show-more-text": "^1.6.2",
+    "react-toggle-dark-mode": "^1.1.1",
     "react-use-error-boundary": "^3.0.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
