--- a/public/config.json
+++ b/public/config.json
@@ -30,7 +30,7 @@
       "GalleryUIUrl": "http://localhost:3002/solutions",
       "VerifyAccess": true,
       "GenAIChatEnabled": true,
-      "GenAIURL": "http://localhost:3001/embed?llmId=bom-llm-id"
+      "GenAIURL": "https://genai.neo4j.solutions/embed?llmId=bom-llm-id"
     }
   }
 }
