--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,18 +1,18 @@
 version: 2
 updates:
-  - package-ecosystem: 'yarn'
+  - package-ecosystem: 'npm'
     directory: '/'
     schedule:
       interval: 'weekly'
     target-branch: 'develop'
 
-  - package-ecosystem: 'yarn'
+  - package-ecosystem: 'npm'
     directory: '/gallery'
     schedule:
       interval: 'weekly'
     target-branch: 'develop'
 
-  - package-ecosystem: 'yarn'
+  - package-ecosystem: 'npm'
     directory: '/docs'
     schedule:
       interval: 'weekly'
