--- a/k8s-deploy/sample-k8s-yamls/deployment.yaml
+++ b/k8s-deploy/sample-k8s-yamls/deployment.yaml
@@ -17,6 +17,7 @@ spec:
         application: neodash-deploy
     spec:
       serviceAccountName: neodash-test
+      automountServiceAccountToken: false
       containers:
         - name: neodash
           image: "neo4jlabs/neodash:latest"
