--- a/k8s-deploy/neodash/templates/deployment.yaml
+++ b/k8s-deploy/neodash/templates/deployment.yaml
@@ -28,6 +28,7 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       serviceAccountName: {{ include "neodash.serviceAccountName" . }}
+      automountServiceAccountToken: false
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
