--- a/package.json
+++ b/package.json
@@ -57,11 +57,12 @@
     "@nivo/sunburst": "^0.83.0",
     "@nivo/treemap": "^0.83.0",
     "@sentry/react": "^7.57.0",
-    "auth0-js": "^9.24.1",
     "@sentry/webpack-plugin": "^2.7.1",
+    "auth0-js": "^9.24.1",
     "babel-runtime": "^6.26.0",
     "chroma-js": "^2.4.2",
     "classnames": "^2.3.1",
+    "crypto-js": "^4.2.0",
     "d3-scale-chromatic": "^3.0.0",
     "dayjs": "^1.11.7",
     "dom-to-image": "^2.6.0",
