--- a/.github/workflows/develop-deployment.yml
+++ b/.github/workflows/develop-deployment.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - name: Checkout Develop Branch
         uses: actions/checkout@v2
-
+--detect.blackduck.signature.scanner.snippet.matching
       - name: Removing Docs Folder
         run: rm -rf docs
       
@@ -29,6 +29,7 @@ jobs:
             detect-version: 9.2.0
             blackduck-url: https://bdscan.i.mercedes-benz.com
             blackduck-api-token: ${{ secrets.BLACKDUCK_TOKEN }}
+            extraArgs: --detect.blackduck.signature.scanner.snippet.matching
             
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
