--- a/.github/workflows/develop-deployment.yml
+++ b/.github/workflows/develop-deployment.yml
@@ -16,14 +16,15 @@ jobs:
         uses: actions/checkout@v2
       - name: Removing Docs Folder
         run: rm -rf docs
-
+      - name: Show files
+        run: ls -la -R .
       - name: 🦆 Scan
         run: bash <(curl -s https://detect.synopsys.com/detect9.sh) 
                --blackduck.url=https://bdscan.i.mercedes-benz.com
                --blackduck.api.token="${{ secrets.BLACKDUCK_TOKEN }}"
                --detect.project.name="Neodash Open Source fork"
                --detect.project.version.name="develop"
-               --detect.code.location.name="."
+               --detect.code.location.name="${{ github.workspace }}"
                --detect.blackduck.signature.scanner.snippet.matching="SNIPPET_MATCHING"
                --detect.blackduck.signature.scanner.license.search=true
                --detect.blackduck.signature.scanner.upload.source.mode=true
